--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,3 @@
 <h1>Bookmark App</h1>
-<div class="panel panel-default">
-    <table class="table table-striped">
-        <tr *ngFor="let bookmark of bookmarks">
-            <td><a [href]="bookmark.url" target="_blank">{{bookmark.title}}</a></td>
-        </tr>
-    </table>
-</div>
+<bookmark-edit [bookmark]="editableBookmark" (save)="save($event)"></bookmark-edit>
+<bookmark-list (edit)="edit($event)" (remove)="remove($event)" [bookmarks]="bookmarks"></bookmark-list>
