--- a/src/app/bookmarkedit.component.html
+++ b/src/app/bookmarkedit.component.html
@@ -2,6 +2,7 @@
     <div class="panel-body">
         <input type="text" [(ngModel)]="bookmark.title" placeholder="Title" style="width:25%;">
         <input type="text" [(ngModel)]="bookmark.url" placeholder="URL" style="width:50%;">
-        <button (click)="onSave()" class="btn btn-primary">Save</button>
+        <button (click)="onSave()" class="btn btn-primary" style="width:12.5%;"><span class="glyphicon glyphicon-ok"></span><span class="hidden-xs">Save</span></button>
+        <button (click)="onClear()" class="btn btn-warning" style="width:12.5%;"><span class="glyphicon glyphicon-remove"></span><span class="hidden-xs">Clear</span></button>
     </div>
 </div>
