--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <h1>Bookmark App</h1>
-<bookmark-edit [bookmark]="editableBookmark" (save)="save($event)"></bookmark-edit>
+<bookmark-edit [bookmark]="editableBookmark" (clear)="clear()" (save)="save($event)"></bookmark-edit>
 <bookmark-list (edit)="edit($event)" (remove)="remove($event)" [bookmarks]="bookmarks"></bookmark-list>
